--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,34 +1,15 @@
-name: Build
+name: Build, create package and attach it to a release
 
 on:
-  push:
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-      - 'beta-v*'
+  workflow_dispatch:
+  release:
+    types:
+      - created
 
 jobs:
 
-  createrelease:
-    name: Create Release
-    runs-on: [ubuntu-latest]
-    permissions:
-      contents: write
-    steps:
-    - uses: actions/checkout@v4
-    - name: Create Release
-      id: create_release
-      uses: ncipollo/release-action@v1
-    - name: Output Release URL File
-      run: echo "${{ steps.create_release.outputs.upload_url }}" > release_url.txt
-    - name: Save Release URL File for publish
-      uses: actions/upload-artifact@v4
-      with:
-        name: release_url
-        path: release_url.txt
-
   build:
     name: Build packages
-    needs: createrelease
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -47,34 +28,31 @@ jobs:
             OUT_FILE_NAME: motionphoto2.exe
             ASSET_MIME: application/vnd.microsoft.portable-executable
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout sources
+      uses: actions/checkout@v4
+      
     - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: 3.8
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt        
+        
     - name: Build with pyinstaller for ${{matrix.TARGET}}
       run: ${{matrix.CMD_BUILD}}
-    - name: Load Release URL File from release job
-      uses: actions/download-artifact@v1
+      
+    - name: Upload the built package
+      uses: actions/upload-artifact@v4
       with:
-        name: release_url
-    - name: Get Release File Name & Upload URL
-      id: get_release_info
-      shell: bash
-      run: |
-        value=`cat release_url/release_url.txt`
-        echo ::set-output name=upload_url::$value        
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        path: dist/${{ matrix.OUT_FILE_NAME}}
+        name: ${{ matrix.OUT_FILE_NAME}}
+
+    - name: Associate the built package to the release, if any
+      if: ${{ github.event_name == 'release' }}
+      uses: softprops/action-gh-release@v2
       with:
-        upload_url: ${{ steps.get_release_info.outputs.upload_url }}
-        asset_path: ./dist/${{ matrix.OUT_FILE_NAME}}
-        asset_name: ${{ matrix.OUT_FILE_NAME}}
-        asset_content_type: ${{ matrix.ASSET_MIME}}
+        files: dist/${{ matrix.OUT_FILE_NAME}}
+ 
