--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,19 +16,16 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: macos-latest
-            TARGET: macos
-            CMD_BUILD: >
-                pyinstaller build-osx.spec &&
-                cd dist/ &&
-                zip -r9 motionphoto2 motionphoto2.app/                
-            OUT_FILE_NAME: motionphoto2.zip
-            ASSET_MIME: application/zip
+#          - os: macos-latest
+#            TARGET: macos
+#            CMD_BUILD: pyinstaller build-osx.spec
+#            CMD_ZIP: zip -r9 MotionPhoto2_macos motionphoto2.app/                
+#            OUT_FILE_NAME: MotionPhoto2_macos.zip
           - os: windows-latest
             TARGET: windows
             CMD_BUILD: pyinstaller build-win.spec
-            OUT_FILE_NAME: motionphoto2.exe
-            ASSET_MIME: application/vnd.microsoft.portable-executable
+            CMD_ZIP: Compress-Archive motionphoto2.exe MotionPhoto2_Windows.zip
+            OUT_FILE_NAME: MotionPhoto2_Windows.zip
     steps:
     - name: Checkout sources
       uses: actions/checkout@v4
@@ -46,6 +43,11 @@ jobs:
         
     - name: Build with pyinstaller for ${{matrix.TARGET}}
       run: ${{matrix.CMD_BUILD}}
+      
+    - name: Compress application
+      run: |
+        cd dist
+        ${{matrix.CMD_ZIP}}
       
     - name: Upload the built package
       uses: actions/upload-artifact@v4
