--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,84 +1,62 @@
-name: Build
+name: Build, create package and attach it to a release
 
 on:
-  push:
-    tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-      - 'beta-v*'
+  workflow_dispatch:
+  release:
+    types:
+      - created
 
 jobs:
-
-  createrelease:
-    name: Create Release
-    runs-on: [ubuntu-latest]
-    steps:
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
-    - name: Output Release URL File
-      run: echo "${{ steps.create_release.outputs.upload_url }}" > release_url.txt
-    - name: Save Release URL File for publish
-      uses: actions/upload-artifact@v4
-      with:
-        name: release_url
-        path: release_url.txt
-
   build:
     name: Build packages
-    needs: createrelease
+    permissions:
+      contents: write
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         include:
-          - os: macos-latest
-            TARGET: macos
-            CMD_BUILD: >
-                pyinstaller build-osx.spec &&
-                cd dist/ &&
-                zip -r9 motionphoto2 motionphoto2.app/                
-            OUT_FILE_NAME: motionphoto2.zip
-            ASSET_MIME: application/zip
+#          - os: macos-latest
+#            TARGET: macos
+#            CMD_BUILD: pyinstaller build-osx.spec
+#            CMD_ZIP: zip -r9 MotionPhoto2_macos motionphoto2.app/                
+#            OUT_FILE_NAME: MotionPhoto2_macos.zip
           - os: windows-latest
             TARGET: windows
             CMD_BUILD: pyinstaller build-win.spec
-            OUT_FILE_NAME: motionphoto2.exe
-            ASSET_MIME: application/vnd.microsoft.portable-executable
+            CMD_ZIP: Compress-Archive motionphoto2.exe MotionPhoto2_Windows.zip
+            OUT_FILE_NAME: MotionPhoto2_Windows.zip
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+    - name: Checkout sources
+      uses: actions/checkout@v4
+      
+    - name: Set up Python
+      uses: actions/setup-python@v5
       with:
-        python-version: 3.8
+        python-version: 3.13
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt        
+        pip install -r requirements.txt 
+        pip install pyinstaller       
+        
     - name: Build with pyinstaller for ${{matrix.TARGET}}
       run: ${{matrix.CMD_BUILD}}
-    - name: Load Release URL File from release job
-      uses: actions/download-artifact@v1
-      with:
-        name: release_url
-    - name: Get Release File Name & Upload URL
-      id: get_release_info
-      shell: bash
+      
+    - name: Compress application
       run: |
-        value=`cat release_url/release_url.txt`
-        echo ::set-output name=upload_url::$value        
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        cd dist
+        ${{matrix.CMD_ZIP}}
+      
+    - name: Upload the built package
+      uses: actions/upload-artifact@v4
       with:
-        upload_url: ${{ steps.get_release_info.outputs.upload_url }}
-        asset_path: ./dist/${{ matrix.OUT_FILE_NAME}}
-        asset_name: ${{ matrix.OUT_FILE_NAME}}
-        asset_content_type: ${{ matrix.ASSET_MIME}}
+        path: dist/${{ matrix.OUT_FILE_NAME}}
+        name: ${{ matrix.OUT_FILE_NAME}}
+
+    - name: Associate the built package to the release, if any
+      if: ${{ github.event_name == 'release' }}
+      uses: softprops/action-gh-release@v2
+      with:
+        files: dist/${{ matrix.OUT_FILE_NAME}}
+ 
