Finish release creation even if one worker fails

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
     permissions:
       contents: write
     runs-on: ${{ matrix.os }}
+    fail-fast: false
     strategy:
       matrix:
         include:
